# Ardrone_L-H

./: .gitignore  CMakeLists.txt  README.md
src/: ARDrone.cpp  ARDrone.h  ARVideo.cpp  ARVideo.h  AffineTransform.cpp  AffineTransform.h  ArdroneTf.cpp  ArdroneTf.h  CMDReciever.cpp  CMDReciever.h  GridDetector.cpp  GridDetector.h  IMUData.cpp  IMUData.h  IMURecorder.cpp  IMURecorder.h  IMUVideoSync.cpp  ImgRecon.cpp  ImgRecon.h  KLT.cpp  NavData.h  PIDController.cpp  PIDController.h  PredictNumber.cpp  PredictNumber.h  ROSThread.cpp  ROSThread.h  RefPoseBr.cpp  RefPoseBr.h  SearchNumber.cpp  SearchNumber.h  VideoRecorder.cpp  VideoRecorder.h  main.cpp  main.cpp~  oldmain.cpp
src/Test/: squares  squares.cpp
